@@ -39,7 +39,8 @@ Authors@R: c(person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd
              person("Winston", "Chang", role="ctb", comment = c(ORCID = "0000-0002-1576-2126")),
              person("Dean", "Attali", role="ctb", comment = c(ORCID = "0000-0002-5645-3493")),
              person("Michael", "Chirico", role="ctb", comment = c(ORCID = "0000-0003-0787-087X")),
-             person("Kevin", "Ushey", role="ctb", comment = c(ORCID = "0000-0003-2880-7407")))
+             person("Kevin", "Ushey", role="ctb", comment = c(ORCID = "0000-0003-2880-7407")),
+             person("Carl", "Pearson", role="ctb", comment = c(ORCID = "0000-0003-0701-7860")))
 Version: 0.6.37.1
 Date: 2024-08-20
 Title: Create Compact Hash Digests of R Objects
